# docker-demo-app

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
