[tool.poetry]
name = "docker-demo"
version = "0.1.0"
description = "Just a quick demo of an app built using Docker."
authors = ["mitches-got-glitches <mitch.edmunds@proton.me>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
pydantic = "^1.9.1"
uvicorn = "^0.18.2"
watchfiles = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
